config/VirtualServices/02-virtualservice-webserver-rewrite.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webserver
spec:
  hosts:
  - webserver
  http:
  - name: canary
    match:
    - uri:
        exact: "/hostname"
    - headers:
        x-canary:
          exact: "true"
    route:
    - destination:
        host: webserver
        subset: v11
  - name: redirect
    match:
    - uri:
        prefix: "/backend"
    redirect:
      uri: /
      authority: backend
      port: 8082
  - name: rewrite
    match:
    - uri:
        prefix: "/healthz"
    rewrite:
      uri: /livez
    route:
    - destination:
        host: webserver
  - name: default
    route:
    - destination:
        host: webserver
        subset: v10
