config/VirtualServices/03-virtualservice-webserver-retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webserver
spec:
  hosts:
  - webserver
  http:
  - name: canary
    match:
    - uri:
        exact: "/hostname"
    - headers:
        x-canary:
          exact: "true"
    route:
    - destination:
        host: webserver
        subset: v11
    fault:
      abort:
        percentage:
          value: 50
        httpStatus: 503
    retries:
      attempts: 5
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
  - name: default
    route:
    - destination:
        host: webserver
        subset: v10
    fault:
      delay:
        percentage:
          value: 20
        fixedDelay: 5s
